--- a/css/style.css
+++ b/css/style.css
@@ -121,16 +121,16 @@ body.modal-open {
 
 #text h1{
 	color: white;
-	height: 100%;
-	max-width: 500px;
-	padding-top: 15%;
-	padding-left: 20%;
+	padding-top: 50px;
 	font-size: 45px;
+	text-align: center;
 }
 
 #text p{
 	color: #d4d4d4;
 	font-size: 25px;
+
+	text-align: center;
 }
 
 
